[package]
name = "barge"
version = "0.1.0"
authors = ["Dénes Fintha <denes.fintha@gmail.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.31"
